tests/ui/structs/suggest-replacing-field-when-specifying-same-type.stderr
error[E0026]: variant `Foo::Bar` does not have a field named `aa`
  --> $DIR/suggest-replacing-field-when-specifying-same-type.rs:10:23
   |
LL |         Foo::Bar { a, aa: 1, c } => (),
   |                       ^^
   |                       |
   |                       variant `Foo::Bar` does not have this field
   |                       help: `Foo::Bar` has a field named `b`

error[E0027]: pattern does not mention field `b`
  --> $DIR/suggest-replacing-field-when-specifying-same-type.rs:10:9
   |
LL |         Foo::Bar { a, aa: 1, c } => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ missing field `b`
   |
help: include the missing field in the pattern
   |
LL |         Foo::Bar { a, aa: 1, c, b } => (),
   |                               +++
help: if you don't care about this missing field, you can explicitly ignore it
   |
LL |         Foo::Bar { a, aa: 1, c, b: _ } => (),
   |                               ++++++
help: or always ignore missing fields here
   |
LL |         Foo::Bar { a, aa: 1, c, .. } => (),
   |                               ++++

error[E0026]: variant `Foo::Baz` does not have a field named `bb`
  --> $DIR/suggest-replacing-field-when-specifying-same-type.rs:13:20
   |
LL |         Foo::Baz { bb: 1.0 } => (),
   |                    ^^
   |                    |
   |                    variant `Foo::Baz` does not have this field
   |                    help: `Foo::Baz` has a field named `a`

error[E0027]: pattern does not mention field `a`
  --> $DIR/suggest-replacing-field-when-specifying-same-type.rs:13:9
   |
LL |         Foo::Baz { bb: 1.0 } => (),
   |         ^^^^^^^^^^^^^^^^^^^^ missing field `a`
   |
help: include the missing field in the pattern
   |
LL |         Foo::Baz { bb: 1.0, a } => (),
   |                           +++
help: if you don't care about this missing field, you can explicitly ignore it
   |
LL |         Foo::Baz { bb: 1.0, a: _ } => (),
   |                           ++++++
help: or always ignore missing fields here
   |
LL |         Foo::Baz { bb: 1.0, .. } => (),
   |                           ++++

error[E0026]: variant `Foo::Bar` does not have a field named `aa`
  --> $DIR/suggest-replacing-field-when-specifying-same-type.rs:20:23
   |
LL |         Foo::Bar { a, aa: "", c } => (),
   |                       ^^ variant `Foo::Bar` does not have this field

error[E0027]: pattern does not mention field `b`
  --> $DIR/suggest-replacing-field-when-specifying-same-type.rs:20:9
   |
LL |         Foo::Bar { a, aa: "", c } => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ missing field `b`
   |
help: include the missing field in the pattern
   |
LL |         Foo::Bar { a, aa: "", c, b } => (),
   |                                +++
help: if you don't care about this missing field, you can explicitly ignore it
   |
LL |         Foo::Bar { a, aa: "", c, b: _ } => (),
   |                                ++++++
help: or always ignore missing fields here
   |
LL |         Foo::Bar { a, aa: "", c, .. } => (),
   |                                ++++

error[E0026]: variant `Foo::Baz` does not have a field named `bb`
  --> $DIR/suggest-replacing-field-when-specifying-same-type.rs:23:20
   |
LL |         Foo::Baz { bb: "" } => (),
   |                    ^^ variant `Foo::Baz` does not have this field

error[E0027]: pattern does not mention field `a`
  --> $DIR/suggest-replacing-field-when-specifying-same-type.rs:23:9
   |
LL |         Foo::Baz { bb: "" } => (),
   |         ^^^^^^^^^^^^^^^^^^^ missing field `a`
   |
help: include the missing field in the pattern
   |
LL |         Foo::Baz { bb: "", a } => (),
   |                          +++
help: if you don't care about this missing field, you can explicitly ignore it
   |
LL |         Foo::Baz { bb: "", a: _ } => (),
   |                          ++++++
help: or always ignore missing fields here
   |
LL |         Foo::Baz { bb: "", .. } => (),
   |                          ++++

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0026, E0027.
For more information about an error, try `rustc --explain E0026`.
